# sam-sell-cx-demo

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: README.md  env.py
alembic/seeder/: agent_seed.py  seed.py
alembic/versions/: 193d4e77661f_create_table_verification_requests.py  1b12010cbf35_create_table_appointment.py  22f81203cb42_remove_smbs_unique_constraints.py  45ba7d8be2ed_alter_column_calendar_settings_smb_preference_table.py  6de5898531dd_create_new_issues_agents_table.py  72e18548ad08_add_column_source_is_customer_in_visitor.py  8efc72d5259f_add_unique_constraint_to_smb_.py  a22d01818916_initial_migration.py  a4f9a88e860e_add_email_column_to_smb_table.py  b8ed1c0fe178_create_schema_password_reset_tokens.py  c345712aff7f_create_table_address.py  c6e5fae955ee_add_column_password_in_smbs.py  c7e7f79cd3f0_create table agent_preferences.py  d7ba761b8b8f_add_columns_token_in_smbs.py  f7cfa28fbaa2_add_columns_in_visitor.py
models/: __init__.py  address.py  agent.py  appointment.py  issues.py  issues_agents.py  password_reset_token.py  smb.py  smb_preferences.py  verification_request.py  visitor.py
sam-app/: README.md  env.json.example  parameters.json  template.yaml
sam-app/apis/: app.py  requirements.txt  user_info.py
sam-app/apis/handlers/: user_handler.py
sam-app/apis/repositories/: agent.py  appointment.py  smb_preference_repository.py
sam-app/apis/services/: agent_service.py  appointment_service.py  create_session.py  lead_service.py  support_ticket_service.py  user_service.py
(+3 files in other folders)
